common-applications/mindspore-cn-north1/uptime-kuma/oauth-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: uptime-kuma
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      containers:
      - args:
        - --provider=oidc
        - --email-domain=*
        - --upstream=http://uptime-kuma-service.uptime-kuma.svc.cluster.local
        - --http-address=0.0.0.0:4180
        - --provider-display-name=authing
        - --cookie-expire=12h0m0s
        - --redirect-url=https://uptime-kuma.osinfra.cn/oauth2/callback
        - --oidc-issuer-url=https://uptime-kuma.authing.cn/oidc
        - --insecure-oidc-allow-unverified-email=true
        - --session-cookie-minimal=false
        - --pass-access-token=true
        - --cookie-secure=false
        - --login-url=https://omapi.osinfra.cn/oneid/oidc/authorize
        - --redeem-url=https://omapi.osinfra.cn/oneid/oidc/token
        - --profile-url=https://omapi.osinfra.cn/oneid/oidc/user
        - --skip-oidc-discovery=true
        - --insecure-oidc-skip-issuer-verification=true
        - --skip-jwt-bearer-tokens=false
        - --oidc-jwks-url=https://oauth2-proxy.authing.cn/oidc/.well-known/jwks.json
        - --set-xauthrequest=true
        - --skip-auth-strip-headers=false
        - --set-authorization-header=true
        - --scope=profile openid email id_token
        - --signature-key=sha256:81nwm1iqdN3FBtnj4O0kL6BRuLfzMzCKaawnztLSRYQ
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/oauth2-proxy:b2d87e8e29285720327bf01aee604f929ea64dd4
        imagePullPolicy: Always
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          protocol: TCP
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 4180
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 4180
          timeoutSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: uptime-kuma
spec:
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    k8s-app: oauth2-proxy
