common-applications/mindspore-cn-north1/uptime-kuma/uptime-kuma-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: uptime-kuma-ingress
  namespace: uptime-kuma
spec:
  rules:
  - host: uptime-kuma.osinfra.cn
    http:
      paths:
      - backend:
          serviceName: oauth2-proxy
          servicePort: 4180
        path: /
  tls:
  - hosts:
    - uptime-kuma.osinfra.cn
    secretName: uptime-kuma-tls
